src/client/styles/tiles.scss
/* ... */
.publisher-tile-container, .userprofile-tile-container{
  display: flex;
  justify-content: flex-start;
  align-items: center;
  flex-direction: row;
  margin-bottom: 1em;
  .publisher-figure, .userprofile-figure{
    width: 40%;
    .publisher-img, .userprofile-img{
      width: 100%;
    }
  }
  .publisher-content, .userprofile-content{
    display: flex;
    justify-content: flex-start;
    align-items: center;
    flex-direction: column;
    width: 100%;
    margin-left: 1.5em;
    a{
      width: 100%;
      .publisher-name, .userprofile-name{
        margin: .5em 0;
        font-size: 24px;
        width: 100%;
        text-align:left;
        font-weight: 400;
      }
      .publisher-title, .userprofile-title{
        font-size: 18px;
        width: 100%;
        text-align:left;
        font-weight: 400;
      }
    }
    .publisher-location-container, .userprofile-location-container{
      display: flex;
      justify-content: flex-start;
      align-items: center;
      flex-direction: row;
      width: 100%;
      .publisher-location-icon, .userprofile-location-icon{
        path{
          fill: $grey;
        }
      }
      .publisher-location, .userprofile-location{
        margin: 0;
        margin-left: .25em;
        text-transform: capitalize;
      }
    }
  }
}

.video-tile-container{
  .video-iframe-container{
    .video-player{
      width: 100% !important;
      height: 180px  !important;
      margin: 0 auto;
      @media all and (min-width: 600px){
        width: 100% !important;
        height: 186px !important;
      }
      @media all and (min-width: 768px){
        width: 100% !important;
        height: 210px !important;
      }
      @media all and (min-width: 1024px){
        width: 100% !important;
        height: 254px !important;
      }
      @media all and (min-width: 1200px){
        width: 100% !important;
        height: 300px !important;
      }
    }
  }
  .video-content{
    display: flex;
    justify-content: flex-start;
    align-items: center;
    width: 100%;
    flex-direction: column;
    .video-title{
      font-size: 20px;
      width: 100%;
      text-align:left;
      margin: .5em 0;
      font-weight: 400;
    }
  }
}

.book-tile-container{
  display: flex;
  justify-content: flex-start;
  align-items: flex-start;
  flex-direction: row;
  margin-bottom: 1em;
  .book-figure{
    width: 40%;
    @media all and (min-width: 600px){
      width: 20%;
    }
    @media all and (min-width: 1024px){
      width: 35%;
    }
    .book-img{
      width: 100%;
    }
  }
  .book-content{
    display: flex;
    justify-content: flex-start;
    align-items: center;
    flex-direction: column;
    width: 100%;
    margin-left: 1.5em;
    .book-title{
      width: 100%;
      text-align:left;
      margin: 0;
      font-weight: 400;
    }
    .book-author{
      margin: 0;
      width: 100%;
      text-align: left;
      font-size: 18px;
      color: #7d7d7d;
    }
    .book-rating-container{
      width: 100%;
      text-align: left;
      margin-top: 1.5em;
    }
  }
}

.adv-tile-container{
  width: 100%;
  .adv-content{
    display: flex;
    justify-content: flex-start;
    align-items: center;
    width: 100%;
    flex-direction: column;
    .adv-title{
      font-size: 20px;
      width: 100%;
      text-align:left;
      margin: .5em 0;
      font-weight: 400;
    }
  }
  .action-btn-container{
    width: 100%;
    display: flex;
    justify-content: flex-start;
    align-items: center;
    margin-bottom: 15px;
    margin-top: 15px;
    .adv-learn-more-btn{
      background-color: rgb(255, 255, 255);
      border: 1px solid rgb(0, 66, 214);
      border-radius: 25px;
      font-family: "Open Sans";
      font-size: 16px;
      padding: 10px 15px;
      color:$blue;
    }
  }
}

.bookclub-tile-container{
  display: flex;
  justify-content: flex-start;
  align-items: flex-start;
  flex-direction: column;
  @media all and (min-width: 768px){
    flex-direction: row;
  }
  .bookclub-figure{
    width: 40%;
    margin: 0 auto;
    @media all and (min-width: 600px){
      width: 20%;
    }
    @media all and (min-width: 1024px){
      width: 35%;
    }
    .bookclub-img{
      width: 100%;
    }
  }
  .bookclub-content{
    display: flex;
    justify-content: flex-start;
    align-items: flex-start;
    flex-direction: column;
    width: 100%;
    @media all and (min-width: 768px){
      margin-left: 1.5em;
    }
  }
}

.post-excerpt-left-container{
  width: 100%;
  text-align: left;
  word-wrap: break-word;
  margin-bottom: 15px;
  .post-excerpt-pharagraph{
    margin: 0;
    font-size: 14px;
    color: $black;
    a{
      font-weight: 600;
      color: $blue;
    }
    .post-readmore-anchor{
      text-decoration: underline;
      color: $black;
      margin-left: .5em;
      font-size: 15px;
      word-wrap: break-word;
    }
  }
}

.post-excerpt-container{
  width: 100%;
  text-align: justify;
  word-wrap: break-word;
  margin-bottom: 15px;
  .post-excerpt-pharagraph{
    margin: 0;
    font-size: 14px;
    color: $black;
    a{
      font-weight: 600;
      color: $blue;
    }
    .post-readmore-anchor{
      display: inherit;
      text-decoration: underline;
      color: $black;
      margin-left: .5em;
      font-size: 15px;
      word-wrap: break-word;
    }
  }
}

.shared{
  padding: 0 15px;
  border-left: 3px solid rgba(0,0,0,0.15);
  p{
    opacity: 0.8;
  }
}

.sharepost-excerpt-left-container{
  width: 100%;
  text-align: left;
  word-wrap: break-word;
  margin-bottom: 15px;
  .sharepost-excerpt-pharagraph{
    margin: 0;
    font-size: 14px;
    color: $black;
    a{
      font-weight: 600;
      color: $blue;
    }
  }
}

.sharepost-excerpt-container{
  width: 100%;
  text-align: justify;
  word-wrap: break-word;
  margin-bottom: 15px;
  .sharepost-excerpt-pharagraph{
    margin: 0;
    font-size: 14px;
    color: $black;
    a{
      font-weight: 600;
      color: $blue;
    }
  }
}
/* ... */

